// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factory, limited endpoint handling handles max 1 item with limit of 5: callback invocation 1`] = `
[
  [
    {
      "data": [
        {
          "id": 1,
          "market": "CH",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, limited endpoint handling handles max 1 item with limit of 5: result 1`] = `
[
  {
    "data": [
      {
        "id": 1,
        "market": "CH",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, limited endpoint handling handles max 5 item with limit of 5: callback invocation 1`] = `
[
  [
    {
      "data": [
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, limited endpoint handling handles max 5 item with limit of 5: result 1`] = `
[
  {
    "data": [
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, limited endpoint handling handles max 8 item with limit of 5: callback invocation 1`] = `
[
  [
    {
      "data": [
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": [
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
        {
          "id": 1,
          "market": "CH",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, limited endpoint handling handles max 8 item with limit of 5: result 1`] = `
[
  {
    "data": [
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": [
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
      {
        "id": 1,
        "market": "CH",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, limited endpoint handling handles max 12 item with limit of 5: callback invocation 1`] = `
[
  [
    {
      "data": [
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": [
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": [
        {
          "id": 1,
          "market": "no market specified",
        },
        {
          "id": 1,
          "market": "no market specified",
        },
      ],
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, limited endpoint handling handles max 12 item with limit of 5: result 1`] = `
[
  {
    "data": [
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": [
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": [
      {
        "id": 1,
        "market": "no market specified",
      },
      {
        "id": 1,
        "market": "no market specified",
      },
    ],
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, pagination handling gets all 1 items and invokes callback in between: api invocation 1`] = `
[
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 0,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 1 items and invokes callback in between: callback invocation 1`] = `
[
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 1,
          },
        ],
        "limit": 6,
        "next": null,
        "offset": 0,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 1 items and invokes callback in between: result 1`] = `
[
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 1,
        },
      ],
      "limit": 6,
      "next": null,
      "offset": 0,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, pagination handling gets all 5 items and invokes callback in between: api invocation 1`] = `
[
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 0,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 5 items and invokes callback in between: callback invocation 1`] = `
[
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 5,
          },
          {
            "id": 4,
          },
          {
            "id": 3,
          },
          {
            "id": 2,
          },
          {
            "id": 1,
          },
        ],
        "limit": 6,
        "next": null,
        "offset": 0,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 5 items and invokes callback in between: result 1`] = `
[
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 5,
        },
        {
          "id": 4,
        },
        {
          "id": 3,
        },
        {
          "id": 2,
        },
        {
          "id": 1,
        },
      ],
      "limit": 6,
      "next": null,
      "offset": 0,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, pagination handling gets all 12 items and invokes callback in between: api invocation 1`] = `
[
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 0,
    },
  ],
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 6,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 12 items and invokes callback in between: callback invocation 1`] = `
[
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 12,
          },
          {
            "id": 11,
          },
          {
            "id": 10,
          },
          {
            "id": 9,
          },
          {
            "id": 8,
          },
          {
            "id": 7,
          },
        ],
        "limit": 6,
        "next": "next",
        "offset": 0,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 6,
          },
          {
            "id": 5,
          },
          {
            "id": 4,
          },
          {
            "id": 3,
          },
          {
            "id": 2,
          },
          {
            "id": 1,
          },
        ],
        "limit": 6,
        "next": null,
        "offset": 6,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 12 items and invokes callback in between: result 1`] = `
[
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 12,
        },
        {
          "id": 11,
        },
        {
          "id": 10,
        },
        {
          "id": 9,
        },
        {
          "id": 8,
        },
        {
          "id": 7,
        },
      ],
      "limit": 6,
      "next": "next",
      "offset": 0,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 6,
        },
        {
          "id": 5,
        },
        {
          "id": 4,
        },
        {
          "id": 3,
        },
        {
          "id": 2,
        },
        {
          "id": 1,
        },
      ],
      "limit": 6,
      "next": null,
      "offset": 6,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
]
`;

exports[`Factory, pagination handling gets all 20 items and invokes callback in between: api invocation 1`] = `
[
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 0,
    },
  ],
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 6,
    },
  ],
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 12,
    },
  ],
  [
    "id",
    {
      "limit": 6,
      "market": "CH",
      "offset": 18,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 20 items and invokes callback in between: callback invocation 1`] = `
[
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 20,
          },
          {
            "id": 19,
          },
          {
            "id": 18,
          },
          {
            "id": 17,
          },
          {
            "id": 16,
          },
          {
            "id": 15,
          },
        ],
        "limit": 6,
        "next": "next",
        "offset": 0,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 14,
          },
          {
            "id": 13,
          },
          {
            "id": 12,
          },
          {
            "id": 11,
          },
          {
            "id": 10,
          },
          {
            "id": 9,
          },
        ],
        "limit": 6,
        "next": "next",
        "offset": 6,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 8,
          },
          {
            "id": 7,
          },
          {
            "id": 6,
          },
          {
            "id": 5,
          },
          {
            "id": 4,
          },
          {
            "id": 3,
          },
        ],
        "limit": 6,
        "next": "next",
        "offset": 12,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
  [
    {
      "data": {
        "href": "href",
        "items": [
          {
            "id": 2,
          },
          {
            "id": 1,
          },
        ],
        "limit": 6,
        "next": null,
        "offset": 18,
        "previous": null,
        "total": 1,
      },
      "headers": {},
      "statusCode": 200,
    },
  ],
]
`;

exports[`Factory, pagination handling gets all 20 items and invokes callback in between: result 1`] = `
[
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 20,
        },
        {
          "id": 19,
        },
        {
          "id": 18,
        },
        {
          "id": 17,
        },
        {
          "id": 16,
        },
        {
          "id": 15,
        },
      ],
      "limit": 6,
      "next": "next",
      "offset": 0,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 14,
        },
        {
          "id": 13,
        },
        {
          "id": 12,
        },
        {
          "id": 11,
        },
        {
          "id": 10,
        },
        {
          "id": 9,
        },
      ],
      "limit": 6,
      "next": "next",
      "offset": 6,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 8,
        },
        {
          "id": 7,
        },
        {
          "id": 6,
        },
        {
          "id": 5,
        },
        {
          "id": 4,
        },
        {
          "id": 3,
        },
      ],
      "limit": 6,
      "next": "next",
      "offset": 12,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
  {
    "data": {
      "href": "href",
      "items": [
        {
          "id": 2,
        },
        {
          "id": 1,
        },
      ],
      "limit": 6,
      "next": null,
      "offset": 18,
      "previous": null,
      "total": 1,
    },
    "headers": {},
    "statusCode": 200,
  },
]
`;
